# uipf-sfm-sift

./: .gitlab-ci.yml  CMakeLists.txt  LoeweSiftModule.cpp  README.md  exec.cpp
debian/: changelog  control  copyright  libuipf-sfm-sift.install  rules  shlibs
include/: SiftKeyPoint.hpp
